--- a/index.css
+++ b/index.css
@@ -18,19 +18,20 @@
     position: sticky;
     position: fixed;
     top: 0px;
-    border-right: 2px solid black;
+    border-right: 2px solid grey;
 }
 
 .left-container h1{
     font-weight: bold;
     font-family: sans-serif;
-    margin: 15% 30% 15% 30%;
+    margin: 10% 30% 15% 30%;
     text-overflow:ellipsis;
     position: relative;
     max-width: 80%;
     -ms-text-overflow: initial;
 }
 .menu a{
+    margin-top: 15% !important;
     margin: 10%;
     width: 80%;
     height: 60%;
@@ -61,7 +62,7 @@
 }
 .bottom-menu{
     width: 85%;
-    margin-top: 60% !important;
+    margin-top: 40% !important;
     margin: 8%;
     border-radius: 20px;
     background-color: rgba(128, 128, 128, 0.363);
@@ -85,13 +86,15 @@
 .sreach-bar{
     margin-left: 10%;
     border-radius: 15px;
-    color: rgba(201, 185, 185, 0.027);
+    color: rgba(201, 185, 185, 0.212);
 }
 #sreach-bar{
+    margin-top: 1%;
     border-radius: 15px;
-    padding: 5px;
-    border-style: none;
-    outline-style: none; height: 30px; width: 22vw; font-size: large;
+    padding: .5%;
+    border-color: rgba(128, 128, 128, 0.425);
+    outline-style: none; max-height: 5vh; width: 22vw;
+     max-width: 22vw; font-size: 20px;
 }
 .right-containes{
     width: 83%;
@@ -104,14 +107,17 @@
     max-height: 20vh auto;
     width: 80% auto;   
     margin-top: 0px;
-    padding: 20px 0px 20px 30px;
-    background-color: rgba(128, 128, 128, 0.911);
+    padding: 20px 0px 20px 30px; 
 }
 .body-img{
+    margin-top: 4%;
     width: 100%;
     height: 100vh;
     position: relative;
     height: auto;
+}
+.body-img h2{
+  padding-left: 5%;
 }
 .body-img ul li{
     margin-top: 40px;
@@ -149,15 +155,16 @@
     width: 45%;
     margin: 2% 1% 1% 2%;
 }
+
 .body-content{
-    width: 100%;
+    margin: 5%;
+    margin-top: 2% !important;
+    width: 90%;
     float: left;
 }
-.body-content h1{
-    font-size: 50px;
-}
-.body-content p{
-font-size: x-large;  
+.body-content h2{
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
 .body-content p span{
     margin-left: 8%;
@@ -169,4 +176,24 @@ font-size: x-large;
     width: 30%;
     margin: 1%;
     float: left;
+}
+.reading{
+    width: 28%;
+    background-color: linear-gradient(to bottom,blue);
+    border: 3px solid greenyellow;
+    float: left;
+    margin: 2%;
+    text-align: center;
+    font-size: medium;
+    border-radius: 7%;
+    color: rgba(0, 128, 0, 0.932);
+}
+.reading img{
+    width: 90%;
+    border-radius: 4%;
+}
+.about{
+    width: 90%;
+    margin: 5%;
+    margin-top: 3% !important;
 }
