--- a/index.css
+++ b/index.css
@@ -83,18 +83,61 @@
     background-color:grey;
     color: white;
 }
+.header{
+    max-height: 20vh auto;
+    width: 100% ;   
+    margin-top: 0px;
+    padding: 20px 0px 20px 30px; 
+}
 .sreach-bar{
-    margin-left: 10%;
+    width: 60%;
+    height: 54px;
+    float: left;
     border-radius: 15px;
     color: rgba(201, 185, 185, 0.212);
 }
+#menu{
+    width: 10%;
+    float: left;
+    
+}
+#menu img{
+    margin: 10%;
+    height: 35px;
+    position: relative;
+    display: none;
+}
 #sreach-bar{
+    margin-left: 6%;
     margin-top: 1%;
-    border-radius: 15px;
+    border-radius: 20px;
     padding: .5%;
+    height: 40px;
     border-color: rgba(128, 128, 128, 0.425);
-    outline-style: none; max-height: 5vh; width: 22vw;
-     max-width: 22vw; font-size: 20px;
+    outline-style: none; max-height: 5vh; width: 30vw;
+     max-width: 33vw; font-size: 20px;
+}
+.header #bell{
+    float: right;
+    height: 30px;
+    margin-top: 1%;
+}
+.proflie{
+    position: relative;
+    width: 40%;
+    height: 54px;
+    float:right;
+    color: black;
+}
+.proflie h3{
+    float: left;
+    max-width: 70px;
+    margin: 2% 1% 1% 15%;
+}
+.proflie img{
+    float: right;
+    height: 60px;
+    margin-right: 30%;
 }
 .right-containes{
     width: 83%;
@@ -103,12 +146,7 @@
     position: relative;
     flex-direction: row;
 }
-.header{
-    max-height: 20vh auto;
-    width: 80% auto;   
-    margin-top: 0px;
-    padding: 20px 0px 20px 30px; 
-}
+
 .body-img{
     margin-top: 4%;
     width: 100%;
@@ -129,30 +167,36 @@
 }
 #img1{
     float: left;
-    width: 31%;
+    width: 33%;
+    height: 48vh;
     margin-left: 2%;
     margin-bottom: 1%;
 }
 #img2{
     float: right;
-    width: 60%;
-    margin-right: 4%;
+    height: 90vh;
+    width: 56%;
+    margin-right: 5%;
 }
 #img3{
     float: left;
-    width: 31%;
+    width: 33%;
+    height: 39vh;
+    margin-top: 1%;
     margin-left: 2%;
 }
 #img4{
     margin-top: 3%;
     float: right;
     width: 47%;
+    height: 50vh;
     margin-right: 4%;
 
 }
 #img5{
     float: left;
     width: 45%;
+    height: 51vh;
     margin: 2% 1% 1% 2%;
 }
 
@@ -192,8 +236,276 @@
     width: 90%;
     border-radius: 4%;
 }
-.about{
-    width: 90%;
-    margin: 5%;
-    margin-top: 3% !important;
+.footer{
+    clear: both;
+    width: 100%;  
+    background-color: black;
+    color: blanchedalmond;
+    height:10vh;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+}
+.footer .col1{
+    padding-left: 4%;
+    padding-top: 2%;
+    width: 60%;
+    letter-spacing: 1px;
+    float: left;
+}
+.footer .col2{
+    width: 40%;
+    float: right;
+    padding-top: 1.4%;
+}
+.footer .col2 ul{
+    padding-left: 18%;
+}
+.footer .col2 li{
+    float: left;
+    width: 10%;
+    margin-left: 5%;
+    list-style: none;
+}
+.footer .col2 img{
+    float: left;
+    width: 100%;
+    padding-left: 0px !important;
+}
+@media screen and (max-width:500px){
+    #menu{
+        display: block;
+    }
+    #menu img {
+        display: contents;
+    }
+    .right-containes{
+        width: 100%;
+    }
+    .left-container{
+        display: none;
+    }
+    .header{
+        margin: 0px;
+    }
+    .sreach-bar{
+        margin-left: 0%;
+        height: 30px;
+        font-size: 15px;
+    }
+    #sreach-bar{
+        border-radius: 15px;
+        height: 20px;
+        border-color: rgba(128, 128, 128, 0.425);
+        outline-style: none; max-height: 5vh; width: 40vw;
+        font-size: 15px;
+    }
+    .header #bell{
+        float: right;
+        height: 20px;
+        margin-top: 1%;
+    }
+    .proflie{
+        position: relative;
+        width: 40%;
+        height: 25px;
+        float:right;
+        color: black;
+    }
+    .proflie h3{
+        float: left;
+        font-size: 15px;
+        max-width: 30px;
+        margin: 2% 1% 1% 15%;
+    }
+    .proflie img{
+        float: right;
+        height: 40px;
+        margin-top: -10px;
+        margin-right: 10px;
+    }
+    .body-img h2{
+        font-size: 20px;
+    }
+    .body-img ul li img{
+        border-radius: 15px;
+    }
+    #img1{
+        float: left;
+        width: 40%;
+        height: 28vh;
+        margin-left: 2%;
+        margin-bottom: 1%;
+    }
+    #img2{
+        float: right;
+        width: 50%;
+        height: 50vh;
+        margin-right: 5%;
+    }
+    #img3{
+        float: left;
+        width: 40%;
+        height: 20vh;
+        margin-top: 1%;
+        margin-left: 2%;
+    }
+    #img4{
+        margin-top: 3%;
+        float: right;
+        width: 45%;
+        height: 39.5vh;
+        margin-right: 5%;
+    
+    }
+    #img5{
+        float: left;
+        width: 45%;
+        height: 40vh;
+        margin: 2% 1% 1% 2%;
+    }
+    .body-content{
+        margin: 5%;
+        margin-top: 2% !important;
+        width: 90%;
+        float: left;
+    }
+    .body-content h2{
+        margin-top: 2%;
+        margin-bottom: 1%;
+        font-size: 20px;
+    }
+    .body-content p span{
+        margin-left: 8%;
+        font-size: 15px;
+        position: relative;
+    }
+    .body-content ul li{
+        list-style: none;
+    }
+    .body-content ul li img{
+        width: 30%;
+        margin: 1%;
+        float: left;
+    }
+    .footer{
+        clear: both;
+        width: 100%;  
+        background-color: black;
+        color: blanchedalmond;
+        height:10vh;
+        border-top-left-radius: 40px;
+        border-top-right-radius: 40px;
+    }
+    .footer .col1 p{
+        font-size: 10px;
+    }
+    .footer .col1{
+        padding-left: 4%;
+        padding-top: 2%;
+        width: 60%;
+        font-size: 20px;
+        letter-spacing: 1px;
+        float: left;
+    }
+    .footer .col2{
+        padding-top:7% ;
+    }
+
+}
+@media screen and (max-width:800px) {
+    .left-container{
+        width: 25%;
+    }
+    .right-containes{
+        width: 75%;
+    }
+    .header{
+        margin: 0px;
+        width: 100%;
+        height: 15vh;
+    }
+    .sreach-bar{
+        margin-left: 0%;
+        height: 40px;
+        font-size: 15px;
+    }
+    #sreach-bar{
+        border-radius: 15px;
+        height: 40px;
+        border-color: rgba(128, 128, 128, 0.425);
+        outline-style: none; max-height: 5vh; width: 35vw;
+        font-size: 15px;
+    }
+    .header #bell{
+        float: right;
+        height: 25px;
+        margin-top: 1%;
+    }
+    .proflie{
+        position: relative;
+        width: 40%;
+        height: 25px;
+        float:right;
+        color: black;
+    }
+    .proflie h3{
+        float: left;
+        font-size: 20px;
+        max-width: 30px;
+        margin: 2% 1% 1% 15%;
+    }
+    .proflie img{
+        float: right;
+        height: 55px;
+        margin-top: -10px;
+        margin-right:20%;
+    }
+    .body-img h2{
+        font-size: 20px;
+    }
+    .body-img ul li img{
+        border-radius: 15px;
+    }
+    #img1{
+        float: left;
+        width: 40%;
+        height: 30vh;
+        margin-left: 2%;
+        margin-bottom: 1%;
+    }
+    #img2{
+        float: right;
+        width: 50%;
+        height: 55vh;
+        margin-right: 5%;
+    }
+    #img3{
+        float: left;
+        width: 40%;
+        height: 23vh;
+        margin-top: 1%;
+        margin-left: 2%;
+    }
+    #img4{
+        margin-top: 3%;
+        float: right;
+        width: 45%;
+        height: 39.5vh;
+        margin-right: 5%;
+    }
+    #img5{
+        float: left;
+        width: 45%;
+        height: 40vh;
+        margin: 2% 1% 1% 2%;
+    }
+    .footer{
+        height: 12vh;
+    }
+    .footer .col1 p{
+        font-size: 12px;
+    }
+    .footer .col2 li{
+        width: 20%;
+    }
 }
