--- a/works.css
+++ b/works.css
@@ -17,7 +17,10 @@
     padding-bottom: 5px;
     border-bottom: 1px solid #F9FD50;
 }
-
+#works{
+    color: white;
+    background-color: grey;
+}
 .todolist{
     width: 80%;
     margin: 5% 10%;
