--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Source+Serif+Pro:ital@1&display=swap');
 #home{
     color: white;
     background-color: grey;
@@ -71,6 +74,14 @@
 .body-content h2{
     margin-top: 2%;
     margin-bottom: 1%;
+    font-family:"Source Sans Pro";
+}
+.body-content i{
+    font-family: "Source Serif Pro";
+
+}
+.body-content p{
+    font-family: "Source Sans Pro";
 }
 .body-content p span{
     margin-left: 8%;
