--- a/reading.css
+++ b/reading.css
@@ -16,7 +16,7 @@
 }
 .body p{
     margin: 20px 0%;
-    font-family: "Source Sans Pro"
+    font-family: "Source Sans Pro";
 }
 .body p span{
     margin-left: 8%;
