--- a/morning.css
+++ b/morning.css
@@ -304,9 +304,9 @@
         width: 25px;
     }
 }
-.topic1{
+.morn{
     font-family:"Source Sans Pro";
-    font-size: 15px;
+    font-size: 25px;
     padding-top: 20px;
 }
 .tip{
